--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "cordova-plugin-themeablebrowser": "^0.2.17",
     "cordova-plugin-whitelist": "^1.3.1",
     "ionic-angular": "3.7.1",
+    "ionic-native": "^2.9.0",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
     "rxjs": "5.4.3",
