--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "@ionic/storage": "2.0.1",
     "@ngx-translate/core": "8.0.0",
     "@ngx-translate/http-loader": "^2.0.0",
+    "ng-jhipster": "0.2.12",
     "cordova-android": "6.3.0",
+    "cordova-hot-code-push-local-dev-addon": "^0.4.2",
+    "cordova-hot-code-push-plugin": "^1.5.3",
     "cordova-ios": "4.5.2",
     "cordova-plugin-device": "^1.1.4",
     "cordova-plugin-ionic-webview": "^1.1.15",
@@ -55,7 +58,9 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-themeablebrowser": {}
+      "cordova-plugin-themeablebrowser": {},
+      "cordova-hot-code-push-plugin": {},
+      "cordova-hot-code-push-local-dev-addon": {}
     },
     "platforms": [
       "android",
